--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -15,14 +15,12 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y software-properties-common
-          sudo add-apt-repository -y "http://dl.openfoam.org/ubuntu"
-          sudo apt-get update
-          sudo apt-get install -y openfoam2312
+          curl -s https://dl.openfoam.com/add-debian-repo.sh | sudo bash
+          sudo apt-get install openfoam2312-default
 
       - name: Source OpenFOAM environment
         run: |
-          echo "source /opt/openfoam2312/etc/bashrc" >> $GITHUB_ENV
+          echo "source /usr/lib/openfoam/openfoam2312/etc/bashrc" >> $GITHUB_ENV
 
       - name: Compile OpenFOAM code
         run: |
